--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <!--Iconess-->
     <link rel="stylesheet" href="assets/fonts/style.css" />
 
+    <!--  Swipper  -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <!--Styles-->
     <link rel="stylesheet" href="style.css" />
 
@@ -17,6 +22,12 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+    <!--  Swipper JS  -->
+    <script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!--  Scrollreveal  -->
+    <script defer src="https://unpkg.com/scrollreveal"></script>
 
     <!--JavaScript-->
     <script defer src="main.js"></script>
@@ -42,6 +53,7 @@
     </header>
 
     <main>
+      <!--HOME-->
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
@@ -63,6 +75,7 @@
 
       <div class="divider-1"></div>
 
+      <!--ABOUT-->
       <section class="section" id="about">
         <div class="container grid">
           <div class="image">
@@ -101,6 +114,7 @@
 
       <div class="divider-2"></div>
 
+      <!--SERVICES-->
       <section class="section" id="services">
         <div class="container grid">
           <header>
@@ -136,6 +150,106 @@
                 totalmente veganos, para qualquer tipo de cabelo.
               </p>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-1"></div>
+
+      <!--TESTIMONIALS-->
+      <section class="section" id="testimonials">
+        <div class="container">
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+          </header>
+          <div class="testimonials swiper-container">
+            <div class="swiper-wrapper">
+              <div class="testimonials swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span> Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Cumque corrupti iure recusandae est
+                    incidunt saepe labore, esse iste consequatur eos, voluptates
+                    aspernatur excepturi dolores, magnam illo ullam laudantium
+                    nostrum eveniet!
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/24.jpg"
+                      alt="Foto da Wanessa Souza"
+                    />
+                    Wanessa Souza
+                  </cite>
+                </blockquote>
+              </div>
+              <div class="testimonials swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span> Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Cumque corrupti iure recusandae est
+                    incidunt saepe labore, esse iste consequatur eos, voluptates
+                    aspernatur excepturi dolores, magnam illo ullam laudantium
+                    nostrum eveniet!
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/9.jpg"
+                      alt="Foto da Franciele Venega"
+                    />
+                    Franciele Venega
+                  </cite>
+                </blockquote>
+              </div>
+              <div class="testimonials swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span> Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Cumque corrupti iure recusandae est
+                    incidunt saepe labore, esse iste consequatur eos, voluptates
+                    aspernatur excepturi dolores, magnam illo ullam laudantium
+                    nostrum eveniet!
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/49.jpg"
+                      alt="Foto da valeska Fabris"
+                    />
+                    Valeska Fabris
+                  </cite>
+                </blockquote>
+              </div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-2"></div>
+
+      <!--CONTACT-->
+      <section class="section" id="contact">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente</h2>
+            <p>
+              Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
+              ouvir suas críticas e sugestões.
+            </p>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5571991420874&text=olá teste projeto NLW"
+              class="button"
+              target="_blank"
+              ><i class="icon-whatsapp"></i> Entrar em contato</a
+            >
+          </div>
+
+          <div class="links">
+            <ul class="grid">
+              <li><i class="icon-phone"></i> 11 99845-6754</li>
+              <li><i class="icon-map-pin"></i> R. Amauri Souza, 346</li>
+              <li><i class="icon-mail"></i> contato@beautysalon.com</li>
+            </ul>
           </div>
         </div>
       </section>
