--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script defer src="main.js"></script>
   </head>
   <body>
-    <header id="header" class="scroll">
+    <header id="header">
       <nav class="container">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
         <!--menu-->
@@ -231,7 +231,7 @@
       <section class="section" id="contact">
         <div class="container grid">
           <div class="text">
-            <h2 class="title">Entre em contato com a gente</h2>
+            <h2 class="title">Entre em contato com a gente!</h2>
             <p>
               Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
               ouvir suas críticas e sugestões.
@@ -265,7 +265,7 @@
           <p>©2021 Beautysalon.</p>
           <p>Todos os direitos reservados.</p>
         </div>
-        <div class="social">
+        <div class="social grid">
           <a href="https://www.instagram.com/" target="_blank"
             ><i class="icon-instagram"></i
           ></a>
